--- a/vermontcomplexsystems-foundation.rw8/Pages/14-Archive/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/14-Archive/Data/Contents.plist
@@ -13,13 +13,10 @@
 				<string>6300</string>
 				<key>markedImages</key>
 				<array>
-					<string>C19D771F-7006-49F4-8E4A-A47E48102AEE.png</string>
-					<string>BC027383-F567-43C2-B57D-F0D627B5048C.png</string>
 					<string>9AA3771A-78A4-45EB-A734-5FF21DDB25D6.png</string>
-					<string>E8B2762A-9375-40E3-9390-8A941E49AD6A.png</string>
 					<string>7C69DC17-D444-47D5-B00E-DD4A7CE6C458.jpeg</string>
-					<string>A15D7459-5F6B-498D-9DD5-91731751757A.png</string>
-					<string>3FD8D94E-2CCA-4312-8848-661543D3EBEF.png</string>
+					<string>7F8265AF-15CB-420D-9C06-862750C6D4A9.jpg</string>
+					<string>4B46CE91-13BA-4FDB-86F1-7EE0C8ABC913.png</string>
 					<string>53F1B7CC-01DE-422F-9025-A9C9F44EC073.jpg</string>
 					<string>D7CA5354-0A44-4585-9CAF-71650D0C4199.jpeg</string>
 					<string>E3AA7F2A-CB9F-49FA-894D-EC9309B27A98.jpeg</string>
@@ -29,20 +26,19 @@
 					<string>E24AA98D-BE58-4858-9805-12F297C6489D.jpg</string>
 					<string>E97F2417-BD68-448C-91B7-0BE97DC867F8.png</string>
 					<string>6E6FA2C8-7E77-4FAA-AA9E-A42F18460CED.jpg</string>
+					<string>A8A47C82-43DD-4024-8A58-9AFDD513345D.jpg</string>
 					<string>097FB8F5-4B66-4248-B7DB-A000DE0398F9.tif</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
-					<string>D6C772E0-747E-42A7-AE11-0FBC2FE3E53D.png</string>
 					<string>9D997113-670C-4952-B79C-16FA68733569.jpg</string>
-					<string>2CF1FA22-EC16-4ACA-AE69-3DB004446288.png</string>
 					<string>99BA26E7-BB0B-4C53-9D36-8B1311A8BFFF.jpeg</string>
 					<string>921BAA7E-FDF7-4456-B843-2CED84DAF2D8.png</string>
 					<string>803AA9AB-E72E-4871-B669-5D50DBADCF2C.jpg</string>
+					<string>9AF2BBDE-CEF1-4AC6-B124-749896419CF8.jpg</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
 					<string>37A0FB04-727E-4C26-BEB1-E53BD3C45472.jpeg</string>
-					<string>EEB87F0E-481A-4309-8348-D0DC8D6BC586.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 23-05-11 #14203556D</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 23-05-12 #163319CFB</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
