update PhD, Masters, and Funding pages
remove Hines and Koliba from PhD/Masters pages; update titles on Funding page

--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Research/ChildPages/07-Funding/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Research/ChildPages/07-Funding/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-05-09T17:04:05Z</date>
+						<date>2023-05-16T14:56:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/EOAWoWMoDi8
-								o1KGNjETuA==
+								ZEVpaaVo1ZtC
+								C8X0RyL51g==
 								</data>
 								<key>Size</key>
-								<integer>53647</integer>
+								<integer>53651</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
