--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-05-09T17:04:05Z</date>
+						<date>2023-05-16T14:49:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -354,11 +354,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PGhKvaW3vkU7
-								FNj+iTewtw==
+								9vd7diUpREIH
+								K1Mt5WsPFQ==
 								</data>
 								<key>Size</key>
-								<integer>129718</integer>
+								<integer>129686</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
