--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-05-09T17:04:05Z</date>
+						<date>2023-05-16T14:49:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -364,11 +364,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tjO25uA/w7zp
-								hlV4zby9rQ==
+								5Oot67p2x3Wm
+								e+lIE42gDg==
 								</data>
 								<key>Size</key>
-								<integer>129456</integer>
+								<integer>129424</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
