--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-05-09T17:04:05Z</date>
+						<date>2023-07-03T15:24:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -380,6 +380,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page9.css</key>
 							<dict>
 								<key>Digest</key>
@@ -404,11 +414,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6yUGhBOsIkGK
-								8lBOWoWEjw==
+								9xcKkAvxDbYn
+								sgIvojshww==
 								</data>
 								<key>Size</key>
-								<integer>70663</integer>
+								<integer>71260</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
