update LEMURS page
update LEMURS page; edit paragraph at top of page

--- a/vermontcomplexsystems-foundation.rw8/Pages/04-LEMURS/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-LEMURS/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-05-09T17:04:05Z</date>
+						<date>2023-07-20T17:19:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -160,6 +160,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page29.css</key>
 							<dict>
 								<key>Digest</key>
@@ -184,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8bpbSN92SHTo
-								kOvvGHcmMg==
+								IdW2+UPQKkW3
+								V1Wjeb/AYA==
 								</data>
 								<key>Size</key>
-								<integer>50677</integer>
+								<integer>51462</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
