--- a/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/4-Vermont-KIAS-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/4-Vermont-KIAS-Workshop/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-08-09T17:35:47Z</date>
+						<date>2023-09-19T14:40:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -130,6 +130,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page66.css</key>
 							<dict>
 								<key>Digest</key>
@@ -154,11 +164,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7Zgdqa1WP3i6
-								Lyg6JzooXA==
+								/owXP9RxWw9s
+								Q4WtyMc2Ag==
 								</data>
 								<key>Size</key>
-								<integer>50696</integer>
+								<integer>51233</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
