update Certificate page
add CEE 6990A to Certificate page (B-List Courses)

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-08-09T17:35:47Z</date>
+						<date>2024-01-03T17:08:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -194,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lhG9lNPJTRYQ
-								qYvcecq/UQ==
+								lokQTRxaBaw6
+								hSqgCsjhOA==
 								</data>
 								<key>Size</key>
-								<integer>55442</integer>
+								<integer>55510</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
