--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -4,24 +4,21 @@
 <dict>
 	<key>expandedItems</key>
 	<array>
-		<string>page22</string>
-		<string>page9</string>
-		<string>page16</string>
-		<string>page64</string>
-		<string>page36</string>
-		<string>page95</string>
-		<string>page2</string>
+		<string>page69</string>
+		<string>page70</string>
 		<string>page3</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>248</real>
+	<key>selectedInspectorTab</key>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page19</string>
+		<string>page70</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
