update MMCOE and OCEAN pages (under Partnerships)
remove Juniper Lovato as contact on MMCOE and OCEAN pages (under Partnerships)

--- a/vermontcomplexsystems-foundation.rw8/Pages/09-Partnerships/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-Partnerships/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-01-31T18:29:51Z</date>
+						<date>2024-02-02T16:49:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -844,11 +844,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OzpWIg+2pyeW
-								ZEmCjCbh2A==
+								e7Z6fipFLALg
+								sMRfpbfBHA==
 								</data>
 								<key>Size</key>
-								<integer>320967</integer>
+								<integer>320301</integer>
 							</dict>
 							<key>files/stacks_page_page70.js</key>
 							<dict>
@@ -864,11 +864,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ab+o6j9bg3/A
-								vtOxW5cQeA==
+								HmI870rCUP/S
+								zWm/LGxbxw==
 								</data>
 								<key>Size</key>
-								<integer>217535</integer>
+								<integer>216433</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
