--- a/vermontcomplexsystems-foundation.rw8/Pages/09-Partnerships/ChildPages/2-OCEAN/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-Partnerships/ChildPages/2-OCEAN/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-01-26T21:03:21Z</date>
+						<date>2024-02-02T16:49:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -270,15 +270,25 @@
 								<key>Size</key>
 								<integer>300365</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page38.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								JXkTR7CPj/gl
-								TXsyuheDYA==
+								3RkkaN5eyBGn
+								eXlG9jO3hA==
 								</data>
 								<key>Size</key>
-								<integer>136834</integer>
+								<integer>133680</integer>
 							</dict>
 							<key>files/stacks_page_page38.js</key>
 							<dict>
@@ -294,11 +304,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QZ0FbFiqTCf2
-								xy1epSTnrA==
+								4keG22napGDM
+								kb8qG3qBsg==
 								</data>
 								<key>Size</key>
-								<integer>72183</integer>
+								<integer>70484</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
